Add imports for list component and update wave layout
Update changeLoggedState mutation to accept a value parameter

Add API endpoints to get characters by season

Update dropdown component styling for desktop

Add getSeasonalCrops and getSeasonalCharacters methods to apiService

Remove console.log statements and page refresh on logout bug fux

Add People component to Dashboard view

Set default selectedSeason value in Dashboard view

Update README.md with new API endpoint documentation

Update container layout styling for desktop
